--- a/index.html
+++ b/index.html
@@ -474,17 +474,16 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Lincon drew my great attention in his final year of undergraduate study when he
-completed his first research project under my supervision. During supervising the research
-project, his performance and research abilities, both as an individual and as a group, impressed me greatly. 
-He has the ability to analyze complex issues and come up with workable solutions because of his keen creativity,
-imagination, and resourcefulness. I believe he will become an excellent researcher both during and after his
-graduate studies.</span>
+                  <span>It is a genuine pleasure for me to write a few words for Partho Ghose. I got to know him through a
+research project where we had the opportunity to publish some research papers together. This project provided
+me the perfect opportunity to know his potential and keen interest in advanced scientific research. His hard labor
+and motivation for a research work is highly appreciable. He is a very punctual, sharp, and quick in perceiving
+new ideas and in finding out the solution of complex problems.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Mohammad Ariful Islam</h3>
-                <h4>Professor at Jagannath University, Dhaka</h4>
+                <h3>Loveleen Gaur, Ph.D</h3>
+                <h4>Professor, School of Computer Science,Taylor’s University, Malaysia</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -492,18 +491,22 @@ graduate studies.</span>
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Lincon completed his Master's thesis under my direct supervison. As a supervisor, I have found him as one
-of the promising students among all who can contribute to a research group with his knowledge and
-professionalism. He also demonstrated a high level of focus and enthusiasm in his academic career. His grades, which have been consistently above
-average in all of his undergraduate semesters, demonstrate his thorough comprehension of the
-subjects. He is meticulous, intelligent, sincere, keen observer and showed his quality in every level of
-his study period.
+                  <span>I have known Partho Ghose since his undergraduate days, for more than eight years now.
+Throughout all these years, I have observed him to be a very intelligent, sincere, and dedicated
+student of our department.I have also been the teacher of Partho in his laboratory course in the first year of his Bachelor
+program. From my close observation of his performance in the laboratory, I can surely tell that
+he is extremely sincere and dedicated towards his laboratory works. Through this passionate
+attraction towards these courses, he secured 1 st place among 54 students in his class. He has a
+very strong background in mathematics and physics complemented by his excellence in
+programming. He has the basic skills in using C, C++, Java, Matlab, Python, Prolog, SQL,
+php, Cplex, Proteus, Simulink, Cadence Tools and IBM PC Assembly Language.
                   </span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Shamima Begum</h3>
-                <h4>Professor at Jagannath University, Dhaka</h4>
+                <h3>Mehnaz Tabassum</h3>
+                <h4>Ph.D. Candidate and Research Assistant, Centre for Health Informatics,Australian Institute of Health Innovation,Faculty of Medicine, Health and Human Sciences,
+                 Macquarie University, NSW, 2109, Australia.</h4>
               </div>
             </div><!-- End testimonial item -->
            
@@ -511,12 +514,12 @@ his study period.
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>I know Lincon Mazumder since 2016 when he enrolled into Department of Microbiology, Jagannath University, Bangladesh. He was one of the best students in his class during undergraduate and masters studies. He scored A in Medical Microbiology, Analytical Microbiology and Immunopathology courses. Mazumder received the National Science and Technology Fellowship from Ministry of Science and Technology Bangladesh for his masters thesis. It gives me great pleasure to see our students achieve big milestone in their lives.</span>
+                  <span>I know Partho Ghose since 2013 when he enrolled into Department of Computer Science and Engineering, Jagannath University, Bangladesh. He was the toper in his class during undergraduate and masters studies. He scored A in most of the courses he took in his B.Sc. and M.Sc. I suvervised him in his undergraduate and garduate degree thesises and he got best paper award for his MS.c. thesis bases paper. It gives me great pleasure to see our students achieve big milestone in their lives.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Syeda Tasneem Towhid</h3>
-                <h4>Associate Professor at Jagannath University, Dhaka</h4>
+                <h3>Uzzal Kumar Acharjee</h3>
+                <h4> Professor and head of the dept. of CSE, Jagannath University, Dhaka</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -524,42 +527,20 @@ his study period.
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Lincon worked as my “Research Assistant (RA)” in
-Bangladesh Council of Scientific and Industrial Research (BCSIR), Dhaka. As my research assistant, he has shown an impressive level of dedication,
-diligence, and intellectual curiosity. He also demonstrated excellent research skills and was
-instrumental in the successful completion of his tasks. He has excellent potential for pursuing
-research-based higher education and a career.</span>
+                  <span>As a student, Partho showed his competence in grasping novel and fundamental
+ideas promptly during my course &quot;Algorithms&quot;. I was impressed by his ability to
+understand the insight of a problem and possible solution approaches. It proves his
+intellectual maturity, strong capability of clear thinking, utmost curiosity. He eventually
+earned a grade of A+ in the theory course. While most of the students struggled to
+balance research work and other academic activities, Partho was able to manage grade
+A+ because of his compartmentalization skills, and strong inquisition excelled in
+meeting all deadlines.He is also known to be a sociable, polite, decorous, and cooperative
+person among his friends and colleagues.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Shahina Akter</h3>
-                <h4>Principal Scientific Officer at BCSIR, Dhaka</h4>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
-                  <span> Lincon's dedication, intelligence, and exceptional work ethic have consistently impressed me throughout our time working together at the Bangladesh Council of Scientific and Industrial Research (BCSIR) laboratory from March 2022 to June 2023. His strong background in microbiology, molecular biology, coupled with his enthusiasm for scientific discovery, has been instrumental in the success of our research endeavors. Lincon consistently demonstrates a deep understanding of complex scientific concepts and exhibits exceptional problem-solving skills, making him an invaluable asset to our research team.</span>
-                  <i class="bi bi-quote quote-icon-right"></i>
-                </p>
-                <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                <h3>Md. Saidul Islam</h3>
-                <h4>Excutive Regulatory Compliance at Aristopharma Ltd.</h4>
-              </div>
-            </div><!-- End testimonial item -->
-
-           <div class="swiper-slide">
-              <div class="testimonial-item">
-                <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Lincon is a hardworking person. He has great passion for science & research. He wants to work in academia near future. Currently he is doing really great in his field. During his student life he was a bright & dedicated student. All the best wishes for him; he is our pride from Bangladesh</span>
-                  <i class="bi bi-quote quote-icon-right"></i>
-                </p>
-                <img src="assets/img/testimonials/testimonials-6.jpg" class="testimonial-img" alt="">
-                <h3>Mithil S S A</h3>
-                <h4>Chief Marketing Officer at HHO </h4>
+                <h3>Ashraf Uddin, Ph.D.</h3>
+                <h4>Associate Professor, Jagannath University, Dept. of CSE,  Dhaka</h4>
               </div>
             </div><!-- End testimonial item -->
 
