--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
             <div class="stats-item">
               <i class="bi bi-emoji-smile"></i>
               <span data-purecounter-start="0" data-purecounter-end="4600" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Teaching Hours</strong> <span>as a Teaching Lecturer</span></p>
+              <p><strong>Teaching Hours</strong> <span>as a Lecturer</span></p>
             </div>
           </div><!-- End Stats Item -->
 
