--- a/skills.html
+++ b/skills.html
@@ -68,6 +68,10 @@
                 <li>DSCH3</li>
                 <li>Cadence</li>
                 <li>CPLEX</li>
+                <li>TensorFlow</li>
+                <li>Keras</li>
+                <li>CUDA</li>
+                <li>PyTorch</li>
             </ul>
         </div>
         
@@ -85,4 +89,3 @@
     </div>
 </body>
 </html>
-
