--- a/hobbies.html
+++ b/hobbies.html
@@ -1,1 +1,78 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Hobbies</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+        }
+        header {
+            background-color: #4CAF50;
+            color: white;
+            text-align: center;
+            padding: 1em 0;
+        }
+        section {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+        }
+        h2 {
+            color: #333;
+        }
+        p {
+            line-height: 1.6;
+            color: #666;
+        }
+        ul {
+            list-style-type: square;
+            margin: 10px 0;
+            padding-left: 20px;
+        }
+        footer {
+            text-align: center;
+            margin: 30px 0;
+            font-size: 0.9em;
+            color: #888;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>My Hobbies</h1>
+    </header>
+    <section>
+        <h2>Creative Arts</h2>
+        <p>I have a deep passion for creative expression through various artistic mediums. I love:</p>
+        <ul>
+            <li>Painting with watercolors, acrylics, and oil paints</li>
+            <li>Creating pencil sketches</li>
+            <li>Crafting unique pieces using mud and wood</li>
+        </ul>
+    </section>
+    <section>
+        <h2>Intellectual Pursuits</h2>
+        <p>I enjoy expanding my knowledge and challenging my mind through:</p>
+        <ul>
+            <li>Reading both fiction and non-fiction books</li>
+            <li>Playing chess</li>
+        </ul>
+    </section>
+    <section>
+        <h2>Exploration</h2>
+        <p>Traveling and exploring unknown places brings me immense joy and inspiration.</p>
+    </section>
+    <footer>
+        <p>&copy; 2024 My Personal Hobbies Page</p>
+    </footer>
+</body>
+</html>
 
