--- a/hobbies.html
+++ b/hobbies.html
@@ -37,6 +37,18 @@
             margin: 10px 0;
             padding-left: 20px;
         }
+        .gallery {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            margin-top: 20px;
+        }
+        .gallery img {
+            width: 100%;
+            max-width: 250px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
         footer {
             text-align: center;
             margin: 30px 0;
@@ -57,6 +69,11 @@
             <li>Creating pencil sketches</li>
             <li>Crafting unique pieces using mud and wood</li>
         </ul>
+        <div class="gallery">
+            <img src="painting1.jpg" alt="Painting 1">
+            <img src="painting2.jpg" alt="Painting 2">
+            <img src="painting3.jpg" alt="Painting 3">
+        </div>
     </section>
     <section>
         <h2>Intellectual Pursuits</h2>
@@ -75,4 +92,3 @@
     </footer>
 </body>
 </html>
-
