--- a/trainings.html
+++ b/trainings.html
@@ -1,1 +1,89 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Training and Seminars</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+        }
+        header {
+            background-color: #4CAF50;
+            color: white;
+            text-align: center;
+            padding: 1em 0;
+        }
+        section {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+        }
+        h2 {
+            color: #333;
+        }
+        p {
+            line-height: 1.6;
+            color: #666;
+        }
+        .training-list {
+            margin-top: 20px;
+        }
+        .training-list h3 {
+            margin-top: 10px;
+            color: #4CAF50;
+        }
+        .training-list p {
+            margin: 5px 0 15px;
+        }
+        footer {
+            text-align: center;
+            margin: 30px 0;
+            font-size: 0.9em;
+            color: #888;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Training and Seminars</h1>
+    </header>
+    <section>
+        <h2>Undergraduate Trainings and Seminars</h2>
+        <div class="training-list">
+            <h3>Application of Technology for a Better World</h3>
+            <p>Organized by the Department of CSE, Jagannath University.</p>
+            <p>This training focused on leveraging emerging technologies to solve real-world problems and create sustainable solutions.</p>
+            <h3>Research Perspective on Software Defined Network (SDN)</h3>
+            <p>Participated in a research seminar arranged by the Department of CSE in 2017.</p>
+            <p>This seminar explored the advancements and potential applications of SDN in improving network flexibility and scalability.</p>
+        </div>
+    </section>
+    <section>
+        <h2>Professional Trainings and Seminars</h2>
+        <div class="training-list">
+            <h3>Innovative Teaching Techniques for Modern Educators</h3>
+            <p>Focused on enhancing teaching methodologies and classroom engagement strategies.</p>
+            <p>This training emphasized interactive teaching tools and innovative pedagogical approaches to improve student outcomes.</p>
+            <h3>Effective Communication in Academic Environments</h3>
+            <p>Explored advanced communication strategies tailored for educators.</p>
+            <p>The session provided insights into effective verbal and non-verbal communication skills for academic success.</p>
+            <h3>Leadership and Mentorship in Academia</h3>
+            <p>Addressed leadership skills and effective mentoring for academic professionals.</p>
+            <p>Participants gained knowledge on mentoring students, leading teams, and fostering a collaborative academic environment.</p>
+            <h3>Ethical Research Conduct</h3>
+            <p>Emphasized the importance of integrity and ethics in academic research.</p>
+            <p>This training covered best practices for conducting ethical research, data management, and avoiding plagiarism.</p>
+        </div>
+    </section>
+    <footer>
+        <p>&copy; 2024 My Training and Seminar Records</p>
+    </footer>
+</body>
+</html>
