--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
    
    
           
-      <section id="resume" class="resume section">
+     <section id="resume" class="resume section">
   <!-- Section Title -->
   <div class="container section-title" data-aos="fade-up">
     <h2>Resume</h2>
@@ -152,7 +152,8 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-lg-10" data-aos="fade-up" data-aos-delay="100">
+      <!-- Left Column -->
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
         <h3 class="resume-title">Summary</h3>
 
         <div class="resume-item pb-0">
@@ -193,6 +194,26 @@
           <p>CGPA 3.79 out of a 4.00 scale</p>
         </div><!-- End Resume Item -->
 
+        <h3 class="resume-title">Teaching Experience</h3>
+        <div class="resume-item pb-0">
+          <h4>Lecturer</h4>
+          <p><em>Department of CSE, Bangladesh University of Business and Technology (BUBT)</em></p>
+          <li>January 2022 – June 2024</li>
+          <ul>
+            <li>Designing and delivering engaging lectures on core Computer Science and Engineering subjects.</li>
+            <li>Developing and updating course materials, including syllabi, lecture notes, and assignments, to align with modern industry trends and academic standards.</li>
+            <li>Supervising undergraduate research projects and guiding students in developing technical and analytical skills.</li>
+            <li>Evaluating student performance through assessments, exams, and coursework while providing constructive feedback.</li>
+            <li>Organizing and participating in academic events, workshops, and seminars to promote knowledge-sharing and innovation.</li>
+            <li>Collaborating with fellow faculty members on curriculum development and departmental initiatives.</li>
+            <li>Mentoring students to support their academic and professional growth.</li>
+          </ul>
+          <p><em>During my tenure, I also contributed to fostering a collaborative and inclusive learning environment, emphasizing both theoretical foundations and practical applications to prepare students for future challenges in the tech industry.</em></p>
+        </div><!-- End Resume Item -->
+      </div><!-- End Left Column -->
+
+      <!-- Right Column for Academic Projects -->
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
         <h3 class="resume-title">Academic Projects</h3>
         <div class="resume-item">
           <h4>Smart Rice Leaf Disease Detection System</h4>
@@ -217,27 +238,10 @@
           <p>Created for Software Engineering lab, this system manages teacher, course, class schedules, and library information efficiently.</p>
           <p><strong>Tools Used:</strong> PHP, HTML, CSS, MySQL</p>
         </div><!-- End Project Item -->
-      </div>
+      </div><!-- End Right Column -->
 
-      <!-- Add new column structure for "Teaching Experience" and "Research Experience" -->
-      <div class="col-lg-2" data-aos="fade-up" data-aos-delay="600">
-        <h3 class="resume-title">Teaching Experience</h3>
-        <div class="resume-item pb-0">
-          <h4>Lecturer</h4>
-          <p><em>Department of CSE, Bangladesh University of Business and Technology (BUBT)</em></p>
-          <li>January 2022 – June 2024</li>
-          <ul>
-            <li>Designing and delivering engaging lectures on core Computer Science and Engineering subjects.</li>
-            <li>Developing and updating course materials, including syllabi, lecture notes, and assignments, to align with modern industry trends and academic standards.</li>
-            <li>Supervising undergraduate research projects and guiding students in developing technical and analytical skills.</li>
-            <li>Evaluating student performance through assessments, exams, and coursework while providing constructive feedback.</li>
-            <li>Organizing and participating in academic events, workshops, and seminars to promote knowledge-sharing and innovation.</li>
-            <li>Collaborating with fellow faculty members on curriculum development and departmental initiatives.</li>
-            <li>Mentoring students to support their academic and professional growth.</li>
-          </ul>
-          <p><em>During my tenure, I also contributed to fostering a collaborative and inclusive learning environment, emphasizing both theoretical foundations and practical applications to prepare students for future challenges in the tech industry.</em></p>
-        </div><!-- End Resume Item -->
-
+      <!-- Full Width Column for Research Experience -->
+      <div class="col-12" data-aos="fade-up" data-aos-delay="600">
         <h3 class="resume-title">Research Experience</h3>
         <div class="resume-item">
           <h4>Graduate Research Assistant</h4>
@@ -247,10 +251,11 @@
             <li>Currently, I am engaged in research at Dr. Azlan Zahid’s Lab, focusing on 3D reconstruction of plant phenotyping and the application of Artificial Intelligence to optimize resource usage in controlled environment agriculture. My work involves leveraging advanced AI models and computational techniques to enhance precision agriculture practices, improve resource efficiency, and address critical challenges in sustainable food production systems.</li>
           </ul>
         </div><!-- End Resume Item -->
-      </div>
-    </div>
-  </div>
+      </div><!-- End Full Width Column -->
+    </div><!-- End Row -->
+  </div><!-- End Container -->
 </section><!-- /Resume Section -->
+
 
 
    
