--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <div class="row">
       <!-- Left Column -->
       <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-        <h3 class="resume-title">Summary</h3>
+        <h3 class="resume-title">Education</h3>
 
         <div class="resume-item pb-0">
           <h4>Partho Ghose</h4>
