--- a/index.html
+++ b/index.html
@@ -217,7 +217,8 @@
         <div class="resume-item pb-0">
           <h4>Lecturer</h4>
           <p><em>Department of CSE, Bangladesh University of Business and Technology (BUBT)</em></p>
-          <li>January 2022 – June 2024</li>
+          <h5>January 2022 – June 2024</h5>
+         <p><em>Responsibilities</em></p>
           <ul>
             <li>Designing and delivering engaging lectures on core Computer Science and Engineering subjects.</li>
             <li>Developing and updating course materials, including syllabi, lecture notes, and assignments, to align with modern industry trends and academic standards.</li>
