--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <h3 class="resume-title">Education</h3>
 
         <div class="resume-item pb-0">
-          <h4>Partho Ghose</h4>
+          <h4> Doctor of Philosophy</h4>
           <p><em>Graduate Student (PhD in Biological and Agricultural Engineering) at Texas A&M University</em></p>
          <h5>Fall 2024 - Now</h5>
           <ul>
