--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
      
       <a href="https://scholar.google.com/citations?user=Tqw15RkAAAAJ&hl=en&oi=ao" class="google-plus"><i class="ai ai-google-scholar-square ai-2.9x"></i></a>
       <a href="https://www.researchgate.net/profile/Partho-Ghose" itemprop="sameAs"><i class="ai ai-researchgate-square ai-fw"></i></a>
-      <a href="https://loop.frontiersin.org/people/2017998/overview" itemprop="sameAs"><i class="fas fa-link"></i> <!-- A generic link icon --></a>
+      <a href="https://loop.frontiersin.org/people/2017998/overview" itemprop="sameAs"><i class="fab fa-loop-square"></i> <!-- A generic link icon --></a>
 
       <a href="https://orcid.org/0000-0002-5840-2008" itemprop="sameAs"><i class="ai ai-orcid-square ai-fw"></i></a>
       <a href="https://www.linkedin.com/in/parthoghose/" class="linkedin"><i class="bi bi-linkedin ai-2.9x"></i></a>
