--- a/certifications.html
+++ b/certifications.html
@@ -26,10 +26,11 @@ div.desc {
 <body>
 
 <div class="gallery">
-  <a target="_blank" href="img_5terre.jpg">
-    <img src="img_5terre.jpg" alt="Cinque Terre" width="600" height="400">
+  <a target="_blank" href="scholarship.png">
+    <img src="scholarship.png" alt="Cinque Terre" width="600" height="400">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">I have been awarded the BAEN Graduate Student Scholarship for Spring 2025 at Texas A&M University.
+    The scholarship, valued at $1,000, recognizes my academic achievements and encourages me to continue striving for excellence in my graduate studies.</div>
 </div>
 
 <div class="gallery">
