--- a/certifications.html
+++ b/certifications.html
@@ -27,7 +27,7 @@ div.desc {
 
 <div class="gallery">
   <a target="_blank" href="scholarship.png">
-    <img src="scholarship.png" alt="Cinque Terre" width="600" height="400">
+    <img src="assets/img/Snapshots/scholarship.png" alt="Cinque Terre" width="600" height="400">
   </a>
   <div class="desc">I have been awarded the BAEN Graduate Student Scholarship for Spring 2025 at Texas A&M University.
     The scholarship, valued at $1,000, recognizes my academic achievements and encourages me to continue striving for excellence in my graduate studies.</div>
