--- a/certifications.html
+++ b/certifications.html
@@ -87,8 +87,7 @@
 <body>
     <!-- Header Section -->
     <header>
-        <h1>My Photo Gallery</h1>
-        <p>Explore some of my favorite moments captured in photos</p>
+        <h1>Certifications</h1>
     </header>
 
     <!-- Gallery Section -->
