--- a/certifications.html
+++ b/certifications.html
@@ -94,21 +94,20 @@
     <div class="gallery">
         <div class="gallery-item">
             <img src="assets/img/Snapshots/scholarship.png" alt="Gallery Image 1">
-            <div class="description">I have been awarded the BAEN Graduate Student Scholarship for Spring 2025 at Texas A&M University.
-    The scholarship, valued at $1,000, recognizes my academic achievements and encourages me to continue striving for excellence in my graduate studies..</div>
+            <div class="description">I have been awarded the BAEN Graduate Student Scholarship for Spring 2025 at Texas A&M University. The scholarship, valued at $1,000, recognizes my academic achievements and encourages me to continue striving for excellence in my graduate studies..</div>
         </div>
          <div class="gallery-item">
-            <img src="assets/img/Snapshots/BSM_conference.jpg" alt="Gallery Image 2">
-            <div class="description">Participated in 36th BSM Annual Conference 2023.</div>
+            <img src="assets/img/Snapshots/cc.jpg" alt="Gallery Image 2">
+            <div class="description">I had the privilege of serving as a Program Committee Member (PCM) at the IEEE 36th Computer-Based Medical Systems (CBMS) 2023 conference, held in L'Aquila, Italy. This role allowed me to contribute to advancing research in medical systems by reviewing and evaluating high-quality academic works in this critical field.</div>
         </div>
             <div class="gallery-item">
             <img src="assets/img/Snapshots/gc.jpg" alt="Gallery Image 3">
-            <div class="description">Participated in BCSIR Congress 2022.</div>
+            <div class="description">I was honored to receive the 2nd Runners-Up Best Paper Award for my collaborative work titled "Grainbee: A Quantum-Resistant Blockchain-Based Ration Distribution System with Hardware Security Modules." This recognition was presented at the IEEE Conference on Computing Applications and Systems (COMPAS 2024) for our innovative approach to blockchain and hardware security, showcasing its potential impact in secure ration distribution systems.</div>
         </div>
        
         <div class="gallery-item">
-            <img src="assets/img/Snapshots/cc.jpg" alt="Gallery Image 4">
-            <div class="description">This is the description of Image 4.</div>
+            <img src="assets/img/Snapshots/ec.jpg" alt="Gallery Image 4">
+            <div class="description">I was honored to receive the Best Paper Award for my MS work titled "Deep Viewing for Covid-19 Detection from X-Ray Using CNN Based Architecture" This recognition was presented at the IEEE Conference on Electricla Engineering, Computer Science and Informatics(EECSI 2021) for the identification of COVID-19 patients using Deep Learning algorithm.</div>
         </div>
         <div class="gallery-item">
             <img src="assets/img/Snapshots/cc.jpg" alt="Gallery Image 5">
