--- a/certifications.html
+++ b/certifications.html
@@ -1,5 +1,4 @@
-
-        <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -17,6 +16,7 @@
             font-family: Arial, sans-serif;
             background-color: #f7f7f7;
             color: #0d0f1f;
+            line-height: 1.6;
         }
 
         /* Header */
@@ -49,8 +49,8 @@
         }
 
         .gallery-item img {
-            width: 250px;
-            height: 250px; /* Fixed height to ensure consistent spacing */
+            width: 100%;
+            height: 250px;
             object-fit: cover;
             border-top-left-radius: 8px;
             border-top-right-radius: 8px;
@@ -78,9 +78,6 @@
             padding: 20px;
             background-color: #333;
             color: #fff;
-            position: absolute;
-            bottom: 0;
-            width: 100%;
         }
     </style>
 </head>
@@ -93,29 +90,20 @@
     <!-- Gallery Section -->
     <div class="gallery">
         <div class="gallery-item">
-            <img src="assets/img/Snapshots/scholarship.png" alt="Gallery Image 1">
-            <div class="description">I have been awarded the BAEN Graduate Student Scholarship for Spring 2025 at Texas A&M University. The scholarship, valued at $1,000, recognizes my academic achievements and encourages me to continue striving for excellence in my graduate studies..</div>
+            <img src="scholarship.jpg" alt="Scholarship Award">
+            <div class="description">I have been awarded the BAEN Graduate Student Scholarship for Spring 2025 at Texas A&M University. The scholarship, valued at $1,000, recognizes my academic achievements and encourages me to continue striving for excellence in my graduate studies.</div>
         </div>
-         <div class="gallery-item">
-            <img src="assets/img/Snapshots/cc.jpg" alt="Gallery Image 2">
+        <div class="gallery-item">
+            <img src="cc.jpg" alt="Program Committee Member">
             <div class="description">I had the privilege of serving as a Program Committee Member (PCM) at the IEEE 36th Computer-Based Medical Systems (CBMS) 2023 conference, held in L'Aquila, Italy. This role allowed me to contribute to advancing research in medical systems by reviewing and evaluating high-quality academic works in this critical field.</div>
         </div>
-            <div class="gallery-item">
-            <img src="assets/img/Snapshots/gc.jpg" alt="Gallery Image 3">
-            <div class="description">I was honored to receive the 2nd Runners-Up Best Paper Award for my collaborative work titled "Grainbee: A Quantum-Resistant Blockchain-Based Ration Distribution System with Hardware Security Modules." This recognition was presented at the IEEE Conference on Computing Applications and Systems (COMPAS 2024) for our innovative approach to blockchain and hardware security, showcasing its potential impact in secure ration distribution systems.</div>
-        </div>
-       
         <div class="gallery-item">
-            <img src="assets/img/Snapshots/ec.jpg" alt="Gallery Image 4">
-            <div class="description">I was honored to receive the Best Paper Award for my MS work titled "Deep Viewing for Covid-19 Detection from X-Ray Using CNN Based Architecture" This recognition was presented at the IEEE Conference on Electricla Engineering, Computer Science and Informatics(EECSI 2021) for the identification of COVID-19 patients using Deep Learning algorithm.</div>
+            <img src="gc.jpg" alt="Best Paper Award">
+            <div class="description">I was honored to receive the 2nd Runners-Up Best Paper Award for my collaborative work titled "Grainbee: A Quantum-Resistant Blockchain-Based Ration Distribution System with Hardware Security Modules." This recognition was presented at the IEEE Conference on Computing Applications and Systems (COMPAS 2024) for our innovative approach to blockchain and hardware security.</div>
         </div>
         <div class="gallery-item">
-            <img src="assets/img/Snapshots/cc.jpg" alt="Gallery Image 5">
-            <div class="description">This is the description of Image 5.</div>
-        </div>
-        <div class="gallery-item">
-            <img src="image6.jpg" alt="Gallery Image 6">
-            <div class="description">This is the description of Image 6.</div>
+            <img src="ec.jpg" alt="Deep Viewing for COVID-19 Detection">
+            <div class="description">I was honored to receive the Best Paper Award for my MS work titled "Deep Viewing for Covid-19 Detection from X-Ray Using CNN Based Architecture." This recognition was presented at the IEEE Conference on Electrical Engineering, Computer Science, and Informatics (EECSI 2021) for identifying COVID-19 patients using a Deep Learning algorithm.</div>
         </div>
     </div>
 
@@ -125,4 +113,3 @@
     </footer>
 </body>
 </html>
-
