--- a/certifications.html
+++ b/certifications.html
@@ -90,7 +90,7 @@
     <!-- Gallery Section -->
     <div class="gallery">
         <div class="gallery-item">
-            <img src="scholarship.jpg" alt="Scholarship Award">
+            <img src="scholarship.png" alt="Scholarship Award">
             <div class="description">I have been awarded the BAEN Graduate Student Scholarship for Spring 2025 at Texas A&M University. The scholarship, valued at $1,000, recognizes my academic achievements and encourages me to continue striving for excellence in my graduate studies.</div>
         </div>
         <div class="gallery-item">
