--- a/certifications.html
+++ b/certifications.html
@@ -90,19 +90,19 @@
     <!-- Gallery Section -->
     <div class="gallery">
         <div class="gallery-item">
-            <img src="scholarship.png" alt="Scholarship Award">
+            <img src="assets/img/Snapshots/scholarship.png" alt="Scholarship Award">
             <div class="description">I have been awarded the BAEN Graduate Student Scholarship for Spring 2025 at Texas A&M University. The scholarship, valued at $1,000, recognizes my academic achievements and encourages me to continue striving for excellence in my graduate studies.</div>
         </div>
         <div class="gallery-item">
-            <img src="cc.jpg" alt="Program Committee Member">
+            <img src="assets/img/Snapshots/cc.jpg" alt="Program Committee Member">
             <div class="description">I had the privilege of serving as a Program Committee Member (PCM) at the IEEE 36th Computer-Based Medical Systems (CBMS) 2023 conference, held in L'Aquila, Italy. This role allowed me to contribute to advancing research in medical systems by reviewing and evaluating high-quality academic works in this critical field.</div>
         </div>
         <div class="gallery-item">
-            <img src="gc.jpg" alt="Best Paper Award">
+            <img src="assets/img/Snapshots/gc.jpg" alt="Best Paper Award">
             <div class="description">I was honored to receive the 2nd Runners-Up Best Paper Award for my collaborative work titled "Grainbee: A Quantum-Resistant Blockchain-Based Ration Distribution System with Hardware Security Modules." This recognition was presented at the IEEE Conference on Computing Applications and Systems (COMPAS 2024) for our innovative approach to blockchain and hardware security.</div>
         </div>
         <div class="gallery-item">
-            <img src="ec.jpg" alt="Deep Viewing for COVID-19 Detection">
+            <img src="assets/img/Snapshots/ec.jpg" alt="Deep Viewing for COVID-19 Detection">
             <div class="description">I was honored to receive the Best Paper Award for my MS work titled "Deep Viewing for Covid-19 Detection from X-Ray Using CNN Based Architecture." This recognition was presented at the IEEE Conference on Electrical Engineering, Computer Science, and Informatics (EECSI 2021) for identifying COVID-19 patients using a Deep Learning algorithm.</div>
         </div>
     </div>
