--- a/certifications.html
+++ b/certifications.html
@@ -102,7 +102,7 @@
             <div class="description">I was honored to receive the 2nd Runners-Up Best Paper Award for my collaborative work titled "Grainbee: A Quantum-Resistant Blockchain-Based Ration Distribution System with Hardware Security Modules." This recognition was presented at the IEEE Conference on Computing Applications and Systems (COMPAS 2024) for our innovative approach to blockchain and hardware security.</div>
         </div>
         <div class="gallery-item">
-            <img src="assets/img/Snapshots/ec.jpg" alt="Deep Viewing for COVID-19 Detection">
+            <img src="assets/img/Snapshots/ec.jpg" alt="Best Paper Award">
             <div class="description">I was honored to receive the Best Paper Award for my MS work titled "Deep Viewing for Covid-19 Detection from X-Ray Using CNN Based Architecture." This recognition was presented at the IEEE Conference on Electrical Engineering, Computer Science, and Informatics (EECSI 2021) for identifying COVID-19 patients using a Deep Learning algorithm.</div>
         </div>
     </div>
