--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         <h4>2024</h4>
             <li> Joni, Sohel Ahmed, Rabiul Rahat, Nishat Tasnin, <b>Partho Ghose</b>, Md Ashraf Uddin, and John Ayoade. "Hybrid-Blockchain-Based Electronic Voting Machine System Embedded with Deepface, Sharding, and Post-Quantum Techniques." Blockchains 2, no. 4 (2024): 366-423. <a href="https://doi.org/10.3390/blockchains2040017">https://doi.org/10.3390/blockchains2040017</a></li> 
         <h4>2023</h4>
-           <li> Sharmin, Selina, Tanvir Ahammad, Md Alamin Talukder, and Partho Ghose. "A hybrid dependable deep feature extraction and ensemble-based machine learning approach for breast cancer detection." IEEE Access (2023). <a https://doi.org/10.1109/ACCESS.2023.3304628">https://doi.org/10.1109/ACCESS.2023.3304628</a></li>
+           <li> Sharmin, Selina, Tanvir Ahammad, Md Alamin Talukder, and Partho Ghose. "A hybrid dependable deep feature extraction and ensemble-based machine learning approach for breast cancer detection." IEEE Access (2023). <a href="https://doi.org/10.1109/ACCESS.2023.3304628">https://doi.org/10.1109/ACCESS.2023.3304628</a></li>
            <h4>2022</h4>
            <li> <b>Ghose, Partho</b>, Muhaddid Alavi, Mehnaz Tabassum, Md Ashraf Uddin, Milon Biswas, Kawsher Mahbub, Loveleen Gaur, Saurav Mallik, and Zhongming Zhao. "Detecting COVID-19 infection status from chest X-ray and CT scan via single transfer learning-driven approach." Frontiers in Genetics 13 (2022): 980338. <a href="https://doi.org/10.3389/fgene.2022.980338">https://doi.org/10.3389/fgene.2022.980338</a></li> 
            <li> <b>Ghose, Partho</b>, Md Ashraf Uddin, Uzzal Kumar Acharjee, and Selina Sharmin. "Deep viewing for the identification of Covid-19 infection status from chest X-Ray image using CNN based architecture." Intelligent systems with applications 16 (2022): 200130. <a href="https://doi.org/10.1016/j.iswa.2022.200130">https://doi.org/10.1016/j.iswa.2022.200130</a></li> 
@@ -609,6 +609,9 @@ person among his friends and colleagues.</span>
             </div>
           </div>
 
+
+
+         
           <div class="col-lg-7">
             <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
@@ -653,12 +656,6 @@ person among his friends and colleagues.</span>
 
  
 
-
-
-     
-  
-  
-  
   </main>
 
   <footer id="footer" class="footer position-relative light-background">
