--- a/index.html
+++ b/index.html
@@ -263,9 +263,9 @@
         <h2>Publications</h2>
          <ul id="Navigation">
            <h4>2025</h4>
-          <li class="stretch"> Md Alamin Talukder, Md Ashraf Uddin, Suman Roy, <b>Ghose, Partho</b>, Smita Sarker, Ansam Khraisat, Mohsin Kazi, Md Momtazur Rahman, Musawer Hakimi. "A hybrid deep learning model for sentiment analysis of COVID-19 tweets with class balancing" Scientific Reports 27788. <a href="https://doi.org/10.1038/s41598-025-97778-7">https://doi.org/10.1038/s41598-025-97778-7</a></li>
+          <li class="stretch"> Md Alamin Talukder, Md Ashraf Uddin, Suman Roy, <b>Partho, Ghose</b>, Smita Sarker, Ansam Khraisat, Mohsin Kazi, Md Momtazur Rahman, Musawer Hakimi. "A hybrid deep learning model for sentiment analysis of COVID-19 tweets with class balancing" Scientific Reports 27788. <a href="https://doi.org/10.1038/s41598-025-97778-7">https://doi.org/10.1038/s41598-025-97778-7</a></li>
        
-          <li class="stretch"> <b>Ghose, Partho</b> and Hasan M. Jamil. "BrainView: A Cloud-based Deep Learning System for Brain Image Segmentation, Tumor Detection and Visualization" Biomedical Journal. <a href="https://doi.org/10.1016/j.bj.2025.100871">https://doi.org/10.1016/j.bj.2025.100871</a></li>
+          <li class="stretch"> <b>Partho, Ghose</b> and Hasan M. Jamil. "BrainView: A Cloud-based Deep Learning System for Brain Image Segmentation, Tumor Detection and Visualization" Biomedical Journal. <a href="https://doi.org/10.1016/j.bj.2025.100871">https://doi.org/10.1016/j.bj.2025.100871</a></li>
         <li class="stretch"> <b>Ghose, Partho</b>, Khondokar Oliullah, Md Kawsher Mahbub, Milon Biswas, Kazi Nur Uddin, and Hasan M. Jamil. "Explainable AI assisted heart disease diagnosis through effective feature engineering and stacked ensemble learning." Expert Systems with Applications 265 (2025): 125928. <a href="https://doi.org/10.1016/j.eswa.2024.125928">https://doi.org/10.1016/j.eswa.2024.125928</a></li>
         <h4>2024</h4>
             <li> Joni, Sohel Ahmed, Rabiul Rahat, Nishat Tasnin, <b>Partho Ghose</b>, Md Ashraf Uddin, and John Ayoade. "Hybrid-Blockchain-Based Electronic Voting Machine System Embedded with Deepface, Sharding, and Post-Quantum Techniques." Blockchains 2, no. 4 (2024): 366-423. <a href="https://doi.org/10.3390/blockchains2040017">https://doi.org/10.3390/blockchains2040017</a></li> 
@@ -594,8 +594,8 @@ person among his friends and colleagues.</span>
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h3>Email Me</h3>
-                  <p>partho.ghose@tamu.edu</p>
-                 <p>partho.ghose@agnet.tamu.edu</p>
+                  <p>partho.cse.xxx@gmail.com</p>
+                 <p>parthoxxxx@agnet.tamu.edu</p>
                 </div>
               </div><!-- End Info Item -->
              
