--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@ person among his friends and colleagues.</span>
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h3>Email Me</h3>
-                  <p>partho.cse.xxx@gmail.com</p>
+                  <p>partho.cse.jnu@gmail.com</p>
                  <p>parthoxxxx@agnet.tamu.edu</p>
                 </div>
               </div><!-- End Info Item -->
